--- a/style/directory.css
+++ b/style/directory.css
@@ -1,22 +1,31 @@
+#officeLayoutImageContainer {
+    margin: 0 auto;
+    text-align: center;
+}
+
+#officeLayoutImage {
+    height: 50vh;
+}
+
 
 #directoryContainer {
     white-space: nowrap;
     overflow-x: auto;
     position: relative;
-    height: 98vh;
+    height: 48vh;
     width: 99vw;
-    /*top: -0.9%;*/
+    padding-top: 0.05vh;
 }
 
 #directory {
-    height: 96vh;
+    height: 47vh;
     width: 99vw;
     margin: 0 auto;
     font-weight: 600;
 }
 
 .container {
-    max-height: 98vh;
+    max-height: 33vh;
     text-align: left;
     position: relative;
 }
@@ -24,9 +33,9 @@
 div.dataContainer {
     display:flex;
     flex-flow:column wrap;
-    max-height: 90vh;
-    width: 0vw;
-    padding-top: 4vh;
+    max-height: 28vh;
+    /*width: 0vw;*/
+    padding-top: 1.25vh;
 }
 
 div.title {
@@ -39,11 +48,10 @@ div.title {
 
 div.dataRow {
     width: 14vw;
-    height: 3vh;
+    height: 1vh;
     display: block;
     white-space: nowrap;
-    padding-right: 1vw;
-    padding-bottom: 0.4vh;
+    padding-bottom: 0.05vh;
 }
 
 
@@ -52,7 +60,7 @@ span.dataPoint {
     white-space: nowrap;
     text-overflow: ellipsis;
     display: inline-block;
-    font-size: 0.35vw;
+    font-size: 0.65vw;
     font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
 }
 
@@ -63,7 +71,7 @@ span.firstName {
     width: 3.5vw;
 }
 span.phone {
-    width: 3.5vw;
+    width: 4.5vw;
 }
 span.office {
     width: 3.5vw;
